# bomax

./: .gitignore  LICENSE  README.md  demo.py  install.sh  pyproject.toml  readme.txt  setup.py  utils.py  verify_package.py
data/: README.md  perf1.txt  perf2.txt
docs/: index.html
examples/: README.md  demo.py  demo2.py  synthetic.py
old/: degree.py  demo.py  initialize.py  normalize.py  plotting.py  requirements.txt  sampler.py  stopping.py  test_install.py
src/bomax/: __init__.py  degree.py  degree_v2.py  initialize.py  normalize.py  plotting.py  sampler.py  stopping.py  utils.py
